# vm-monitor

./: LICENSE  README.md  setup_vm_monitor.sh
vm-monitor/: Cargo.toml  README.md  instances.csv
vm-monitor-frontend/: README.md  index.html  package-lock.json  package.json
vm-monitor-frontend/src/: App.vue
vm-monitor-frontend/src/components/: AgentSelector.vue  Header.vue  MetricsCharts.vue  SystemInfo.vue
vm-monitor-frontend/src/composables/: useMetrics.js
vm-monitor-frontend/src/styles/: global.css
vm-monitor-frontend/src/utils/: index.js
vm-monitor/src/: api.rs  auth.rs  config.rs  errors.rs  main.rs  monitor.rs  recommend.rs
vm_monitor_api/: README.md  requirements.txt
vm_monitor_api/app/: main.py  models.py  security.py
